## PLUXML 5.8.4 (YYYY/MM/DD) ##
[+] Disable removing short words on urlify
FIX Icon's CSS in medias manager (P3ter)
FIX Reduce notification bar width (P3ter)
FIX Error "Constant PLX_SITE_LANG already defined" (bazooka07)
FIX Do not use urlify for links (P3ter)

## PLUXML 5.8.3 (2020/05/19) ##
[+] New Fontello icons on authentification page and in the admin panel (bazooka07)
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
[+] plxShow->artThumbnail can have a link to the article #426 (Thatoo)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)
FIX Comment editor is empty #418 (P3ter)
FIX Comments list sorting #419 (P3ter)
FIX Comments feed link is displayed even if comments are disabled #429 (guiguid)
FIX Default theme : double underline on footer menu (P3ter)
FIX Oauth2 token generation button #445 (bazooka07)

## PLUXML 5.8.2 (2020/02/09) ##
[+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
FIX #365 plxUtils::getLangs() optimisations (bazooka07)
FIX #367 plxUtils::sendmail() minor correction (bazooka07)
FIX #369 Comments indentation does not work on frontend (P3ter)
FIX #372 [i18n] missing L_CONFIG_ADVANCED_LOSTPASSWORD in oc, es, pl, pt, ro, ru, it (P3ter)
FIX #378 Add UTF-8 to plxUtils::urlify() (bazooka07)

## PLUXML 5.8.1 (sortie : 07/01/2020) ##
FIX #360 Undefined index: password_token
FIX #361 Use of undefined constant PLX_TEMPLATES